# delver

./: .gitignore  10k.tmpl  10k_goal.tmpl  CLEANUP_SUMMARY.md  Cargo.toml  PERSISTENT_TRACING_SETUP.md  PRD2.md  README.md  Trunk.toml  build.rs  debug.json  docker-compose.yml  hello.py  logs-py.txt  logs.txt  pyproject.toml
.cargo/: config.toml
.github/workflows/: CI.yml  rust-tests.yml
benches/py/: profile_commands.txt  profile_results.prof
crates/delver/: Cargo.toml  pyproject.toml
crates/delver-core/: Cargo.toml  build.rs
crates/delver-core/src/: chunker.rs  docql.rs  layout.rs  lib.rs  matcher.rs  parse.rs
crates/delver-core/src/fonts/: generated.rs  mod.rs
crates/delver/src/: lib.rs  main.rs
crates/delver/tests/: 10k_1.tmpl  3M_2015_10K.text  3M_2015_10K.text.json  AAPL_2024_10K.text.json  collation_tests.rs  common.rs  forrest.json  integration_tests.rs  layout.rs  output_tests.rs  parse.rs  search_index_tests.rs  template_tests.rs
crates/viewer/: .gitignore  Cargo.toml  Trunk.toml  build.rs  build_wasm.sh  index.html  initializer.js
crates/viewer/src/: app.rs  event_panel.rs  lib.rs  main.rs  match_panel.rs  mod.rs  rendering.rs  store.rs  stubs.rs  ui_controls.rs  utils.rs
docs/: DOCQL_SYNTAX.md  Gemfile  README.md  _config.yml  api.md  documentation.md  getting-started.md  index.md
docs/_docs/: collation.md  implementation-plan.md  parser.md  template-syntax.md
docs/_includes/: footer.html  head.html  header.html  social.html
docs/_layouts/: doc.html  page.html
docs/_sass/: custom.scss
examples/: basic.py
src/: chunker.rs  debug_viewer.rs  docql.pest  docql.rs  dom.rs  features.rs  geo.rs  layout.rs  lib.rs  logging.rs  main.rs  matcher.rs  parse.rs  persistent_store.rs  search_index.rs  unst.pest
src/debug_viewer/: app.rs  async_app.rs  match_panel.rs  mod.rs  rendering.rs
src/fonts/: canonicalize.rs  generated.rs  mod.rs
tests/: 10k_1.tmpl  3M_2015_10K.text.json  3m_2015_10K_1.text.json  collation_tests.rs  common.rs  integration_tests.rs  layout.rs  output_tests.rs  parse.rs  search_index_tests.rs  setup.rs  template_tests.rs
