[package]
name = "delver"
version = "0.1.0"
edition = "2021"

[lib]
name = "delver_pdf"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]
debug-viewer = ["egui", "eframe", "egui_extras", "pdfium-render"]
eframe = ["dep:eframe"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.6"
indexmap = "2.2.3"
log = "0.4.22"
lopdf = { version = "0.34.0", features = ["nom_parser", "serde"] }
nom = "7.1.3"
pest = "2.7.14"
pest_derive = "2.7.14"
pyo3 = { version = "0.23.4", features = ["extension-module"], optional = true }
rayon = "1.10.0"
regex = "1.11.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
shellexpand = "3.1.0"
strsim = "0.11.1"
tokenizers = "0.20.3"
tokio = "1.41.0"
unicode-normalization = "0.1.24"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
egui = { version = "0.30", optional = true }
egui_extras = { version = "0.30", features = ["image"], optional = true }
eframe = { version = "0.30", optional = true }
pdfium-render = { version = "0.8.27", optional = true }
tracing-appender = "0.2.3"
lazy_static = "1.5.0"

[dev-dependencies]
pretty_assertions = "1.3"
