[workspace]
members = [
    "crates/delver",
    "crates/delver-core",
    "crates/viewer",
]

[workspace.dependencies]
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.6"
indexmap = "2.2.3"
log = "0.4.22"
lopdf = { version = "0.35.0", features = ["nom_parser", "serde"] }
nom = "7.1.3"
pest = "2.7.14"
pest_derive = "2.7.14"
rayon = "1.10.0"
regex = "1.11.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
shellexpand = "3.1.0"
strsim = "0.11.1"
tokio = "1.41.0"
unicode-normalization = "0.1.24"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "valuable"] }
tracing-appender = "0.2.3"
lazy_static = "1.5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing-tree = "0.4.0"
once_cell = "1.20.3"
ordered-float = "5.0.0"
rstar = "0.12.2"
multi_index_map = "0.11.0"
geo = "0.29.3"
anyhow = "1.0.98"
base64 = "0.22.1"
image = "0.25.6"
dashmap = "6.1.0"
smallvec = "1.15.1"
flamegraph = "0.6.7"
pretty_assertions = "1.3"
rusttype = "0.9.3"

