[package]
name = "delver-core"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
lopdf = { workspace = true, features = ["nom_parser", "serde"] }
nom = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
unicode-normalization = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "valuable"] }
tracing-appender = { workspace = true }
indexmap = { workspace = true }
strsim = { workspace = true }
lazy_static = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
once_cell = { workspace = true }
ordered-float = { workspace = true }
rstar = { workspace = true }
multi_index_map = { workspace = true }
geo = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
image = { workspace = true }
dashmap = { workspace = true }
smallvec = { workspace = true }
tracing-tree = { workspace = true }
tokenizers = { version = "0.21.2", default-features = false, features = ["fancy-regex"] } 

[build-dependencies]
serde.workspace = true
rusttype.workspace = true
lazy_static.workspace = true