[package]
name = "delver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "delver"
path = "src/main.rs"

[features]
extension-module = ["pyo3/extension-module"]

[dependencies]
delver-core = { path = "../delver-core" }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "valuable"] }
tracing-appender = { workspace = true }
shellexpand = { workspace = true }
pyo3 = { version = "0.25.1", features = ["extension-module"], optional = true }
tokenizers = { version = "0.21.2", features = ["http"] }
anyhow.workspace = true

[dev-dependencies]
flamegraph = { workspace = true }
pretty_assertions = { workspace = true } 
