[package]
name = "viewer"
version = "0.1.0"
edition = "2021"


[dependencies]
delver-core = { path = "../delver-core" }
eframe = { version = "0.32", features = ["persistence"] }
egui = "0.32"
egui_extras = { version = "0.32", features = ["image"] }
pdfium-render = { version = "0.8.34"}
log = { workspace = true }
lopdf = { workspace = true, features = ["nom_parser", "serde"] }
rstar = { workspace = true }
serde = { workspace = true, features = ["derive"] }
geo = { workspace = true }
image = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
rfd = "0.15.4"
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
futures-channel = "0.3"
wasm-bindgen = "0.2.100"
web-sys = "0.3.70"
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
uuid = { workspace = true, features = ["js"] }